# anything

./: .eslintrc  .gitattributes  .gitignore  .npmrc  .rtx.toml  README.md  architecture.excalidraw  global.d.ts  index.html  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  railway.json  tailwind.config.js  tsconfig.json  turbo.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/macOs/: entitlements.plist
apps/tauri/src-tauri/src/: main.rs
apps/web/rust/anything-server/: .env.template  Cargo.toml  nixpacks.toml
auth-server/oauth-server/: Cargo.toml
auth-server/oauth-server/src/: auth_types.rs  main.rs  services.toml
core/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
core/anything-events/: Cargo.toml  README.md  build.rs
core/anything-events/node_derive/: Cargo.toml
core/anything-events/node_derive/src/: lib.rs
core/anything-events/node_derive/tests/: node_tests.rs
core/anything-events/proto/: event.proto
core/anything-events/src/: bus.rs  error.rs  event.rs  handler.rs  lib.rs  ring.rs  serde.rs  types.rs  utils.rs  validation.rs  wait_strategy.rs
core/anything-events/src/bus/: device.rs
core/anything-events/src/event/: event.rs  mod.rs  store.rs
core/anything-events/src/models/: event.rs
core/anything-events/src/observable/: delegate.rs  mod.rs  observable.rs
core/anything-events/src/pubsub/: mod.rs  publisher.rs  subscriber.rs
core/anything-events/src/seq/: mod.rs  sequence.rs  sequence_group.rs  sequencer.rs
core/anything-events/src/serde/: json.rs  protobuf.rs
core/anything-events/tests/: test_delegate.rs  test_observable.rs
core/anything-file-access/: files.rs
core/anything-server/: .dockerignore  .env.template  Cargo.toml  Dockerfile  _Dockerfile  _nixpacks.toml  newish_nixpacks.toml  nixpacks.toml  simple_Dockerfile
core/anything-server/action_db/: action_template_stash.json  action_templates.json
core/anything-server/src/: account_auth_middleware.rs  actions.rs  api.rs  api_key_middleware.rs  auth.rs  bundler.rs  charts.rs  email.rs  execution_planner.rs  files.rs  main.rs  marketplace.rs  metrics.rs  otel_setup.rs  secrets.rs  supabase_auth_middleware.rs  supabase_jwt_middleware.rs  system_variables.rs  task_engine.rs  task_types.rs  tasks.rs  templater.rs  testing.rs  testing_helpers.rs  trigger_engine.rs  variables.rs  websocket.rs  workflow_types.rs  workflows.rs
core/anything-server/src/actor_processor/: ACTOR_RUSTYSCRIPT_OPTIMIZATION.md  README.md  RUSTYSCRIPT_OPTIMIZATION.md  WORKER_INTEGRATION.md  actor_pool.rs  actor_system.rs  dependency_resolver.rs  js_worker_pool.rs  messages.rs  mod.rs  processor.rs  task_actor.rs  tests.rs  workflow_actor.rs
core/anything-server/src/agents/: channels.rs  create.rs  delete.rs  get.rs  mod.rs  tools.rs  twilio.rs  update.rs  vapi.rs
core/anything-server/src/auth/: accounts.rs  init.rs  mod.rs  providers.rs  refresh.rs  utils.rs
core/anything-server/src/billing/: accounts.rs  billing_usage_engine.rs  create_links.rs  mod.rs  stripe_webhooks.rs  usage.rs
core/anything-server/src/bundler/: bundler.rs  bundler_test.rs  mod.rs
core/anything-server/src/campaigns/: contacts.rs  create.rs  delete.rs  engine.rs  get.rs  mod.rs  update.rs
core/anything-server/src/contacts/: create.rs  delete.rs  get.rs  mod.rs  update.rs
core/anything-server/src/files/: mod.rs  r2_client.rs  routes.rs  utils.rs
core/anything-server/src/marketplace/: actions.rs  mod.rs  profiles.rs  scanning.rs  workflows.rs
core/anything-server/src/new_processor/: bundling_utils.rs  db_calls.rs  execute_task.rs  flow_session_cache.rs  mod.rs  process_trigger_utils.rs  processor.rs
core/anything-server/src/old_parallel_processor/: db_calls.rs  hydrate_processor.rs  path_processor.rs  processor.rs  processor_utils.rs
core/anything-server/src/processor/: README.md  components.rs  db_calls.rs  enhanced_processor.rs  enhanced_processor_test.rs  execute_task.rs  flow_session_cache.rs  hydrate_processor.rs  mod.rs  new_processor.rs  old_processor.rs  parallelizer.rs  parsing_utils.rs  path_processor.rs  process_trigger_utils.rs  processor.rs  processor_utils.rs  utils.rs
core/anything-server/src/status_updater/: mod.rs
core/anything-server/src/system_actions/: formatter_action.rs  mod.rs  process_http_task.rs
core/anything-server/src/system_plugins/: mod.rs  subflow.rs
core/anything-server/src/system_workflows/: mod.rs
core/anything-server/src/templater/: files.rs  (+2 more)
core/anything-server/template_db/: action_template_stash.json  action_templates.json
core/crates/anything-core/: Cargo.toml
core/crates/anything-engine/: Cargo.toml
core/crates/anything-events/: Cargo.toml  TODO.md  build.rs
core/crates/anything-graph/: Cargo.toml
core/crates/anything-queue/: Cargo.toml
core/crates/carl/: Cargo.toml
core/crates/common/: Cargo.toml
core/crates/coordinator/: Cargo.toml
core/crates/graph/: Cargo.toml  README.md
core/crates/mq/: Cargo.toml  README.md
core/crates/persistence/: Cargo.toml
core/crates/plugins/: Cargo.toml  Justfile
core/crates/runtime/: Cargo.toml
core/crates/server/: Cargo.toml
core/crates/store/: Cargo.toml
core/crates/tauri-plugin-anything/: Cargo.toml  README.md  package.json
core/crates/tauri-plugin-anything-tauri/: Cargo.toml  README.md  package-lock.json  package.json  vitest.config.ts
plugin-core/crates/pdk/: Cargo.toml
plugin-core/crates/pdk-mock-plugin/: Cargo.toml
plugin-core/crates/pdk-mock-simple-host/: Cargo.toml  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  sql_plugin.rs
src-tauri/src/events/: mod.rs  rest.rs
src-tauri/src/events2/: mod.rs
src-tauri/src/file_manager/: mod.rs
src-tauri/src/local_models/: cancellation.rs  events.rs  mod.rs  models.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/rustformers/: cancellation.rs  config.rs  context_file.rs  events.rs  mod.rs  models.rs
src-tauri/src/sql/: decode.rs  mod.rs  plugin.rs  sql2.rs  sql_plugin.rs
(+1150 files in other folders)
