[package]
name = "anything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "anything"
path = "bin/main.rs"

[workspace]
members = ["crates/*"]
resolver = "2"

[dependencies]
[workspace.dependencies]
anything-core = { path = "./crates/anything-core", version = "*" }

dirs = { version = "5.0.1" }
tempfile = { version = "3" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_builder = "0.12.0"


serde = { version = "1.0" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0.75" }
lazy_static = { version = "1.4.0" }
once_cell = { version = "1.18" }
async-trait = { version = "0.1" }

tokio = { version = "1.32.0", features = ["full"] }
thiserror = { version = "1.0.47" }

indexmap = { version = "2.0.0", features = ["serde"] }
futures = { version = "0.3.28" }

# Tracing
tracing-appender = "0.2.2"
tracing = "0.1.37"

tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "fmt",
    "json",
    "env-filter",
    "registry",
    "std",
] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-http = "0.9.0"
opentelemetry-otlp = "0.13.0"
opentelemetry-semantic-conventions = "0.12"
tracing-tree = "0.2.2"

uuid = { version = "1.4.1", features = ["v4"], default-features = false }
