[package]
name = "anything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = "1.0.66"
env_logger = "0.10.0"
clap = { version = "4.0.10", features = ["derive"] }
prettytable-rs = "0.10.0"
blake3 = "1.5.0"

[workspace]
members = ["crates/*"]
exclude = ["crates/plugins", "crates/plugins/*"]

[workspace.dependencies]
anything-runtime = { path = "./crates/runtime" }
anything-common = { path = "./crates/common" }
anything-graph = { path = "./crates/graph" }
anything-store = { path = "./crates/store" }
anything-mq = { path = "./crates/mq" }
anything-persistence = { path = "./crates/persistence" }
anything-coordinator = { path = "./crates/coordinator" }

actix-web = { version = "4" }
lazy_static = "1.4.0"
tokio = "1.32.0"
toml = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
async-trait = "0.1.73"
tracing = "0.1.37"
thiserror = "1.0.49"
derive_builder = "0.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures = { version = "0.3.28" }
regex = "1.10.2"
uuid = { version = "1.5.0", features = ["v4", "serde"] }

indexmap = { version = "2.0.2" }
tempfile = "3.8.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
