[package]
name = "anything"
version = "0.0.0"
description = "A local app to do anything"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "os-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
toml = "0.5"
dirs = "5.0" #for file access on rust side like making db
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "json", "time"] } #for use in db also
tokio = { version = "1", features = ["full"] } #for use in db also
futures-core = "0.3"
time = "0.3" # for parsing sql
thiserror = "1.0" # for sql plugin adopted from tauri example

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"
