[package]
name = "anything"
version = "0.0.0"
description = "A local app to do anything"
authors = ["Carl Lippert"]
license = ""
repository = "https://github.com/tryanything-ai/anything"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "os-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
toml = "0.5"
dirs = "5.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] } #trying this for sql2.rs
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "json", "time"] } #for use in db also
tokio = { version = "1", features = ["full"] } #for use in db also
futures-core = "0.3"
time = "0.3" # for parsing sql
thiserror = "1.0" # for sql plugin adopted from tauri example
lazy_static = "1.4.0"
llm = "0.1.1"
anyhow = "1.0.71"
flume = "0.10.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "fmt", "env-filter"] }
tracing-appender = "0.2.2"

# inspiration for all rustformers cargo packages https://github.com/clarkmcc/chitchat/blob/main/src-tauri/Cargo.toml
# [target.'cfg(target_os = "macos")'.dependencies]
# llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["metal"] }
# cocoa = "0.24.1"

# TODO: Figure out how to get CUDA working on Linux without ruining CUDA-less testing
# [target.'cfg(target_os = "windows")'.dependencies]
# llm = { git = "https://github.com/rustformers/llm", branch = "main", features = ["cublas"] }

# [target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
# llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"
