[package]
name = "oauth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
oauth2 = "4.4.2"
