[package]
name = "anything-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aevents"
path = "./bin/main.rs"

[dependencies]
crossbeam = "0.8.2"
log = "0.4.20"
protobuf = "3.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = "1.32.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
zmq = "0.10.0"
node_derive = { path = "node_derive" }
async-trait = "0.1.73"
tmq = "0.4.0"

[dev-dependencies]
parking_lot = "0.12.1"
