[package]
name = "anything-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0" 

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
cron = "0.12.1"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
jsonwebtoken = "9.3.0"
postgrest = "1.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
slugify = "0.1.0"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "set-header"] }
reqwest = { version = "0.11", features = ["json"] }
openssl = "0.10"
openssl-sys = "0.9"
regex = "1.10.6"
rand = "0.8.5"
urlencoding = "2.1.3"
sha2 = "0.10.8"
chrono-tz = "0.10.0"
tracing = "0.1.40"
pulldown-cmark = "0.12.2"
html2md = "0.2.14"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.94"
serde_v8 = "=0.234.0"
rustyscript = "=0.11.0"
node-semver = "2.2.0"
futures = "0.3.31"
aws-sdk-s3 = "1.3.0"
aws-config = "1.3.0"
aws-types = "1.3.0"

