[package]
name = "node_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
    "derive",
    "parsing",
] }
proc-macro2 = "1.0"
proc-macro-error = "1"


[dev-dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
trybuild = "1"
