[package]
name = "anything-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }

colored = "2.0.4"
humantime = "2.1.0"
config = { version = "0.13", default-features = false, features = [
    "json",
    "toml",
    "yaml",
] }

data-encoding = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
futures = { workspace = true }

chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
dirs = { version = "5.0" }
once_cell = { workspace = true }
thiserror = { workspace = true }
# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
