[package]
name = "anything-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anything-graph = { path = "../anything-graph" }

serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
anyhow = { workspace = true }
miette = { version = "5.10.0", features = ["fancy"] }

tracing = { workspace = true }
fs_extra = "1.3.0"
tera = "1.19.1"
derive_builder = { workspace = true }
