[package]
name = "anything-events"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
anything-core = { path = "../anything-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
zmq = "0.10.0"

# Tracing
tracing = "0.1.35"
# tracing-log = "0.1.3"
tracing-subscriber = { workspace = true }
# tracing-appender = "0.2.2"
# tracing-opentelemetry = "0.21.0"
# opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }

anyhow = { workspace = true }
colored = "2.0.4"
chrono = { version = "0.4.29", features = ["serde"] }
humantime = "2.1.0"
config = { workspace = true }

once_cell = { workspace = true }
clap = { version = "4.4.2", features = ["derive"] }
# dotenv = { workspace = true }
git-version = { workspace = true }
thiserror = { workspace = true }
anymap = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
axum = { version = "0.6", features = ["json", "tokio"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }


[dev-dependencies]
fake = { version = "2.8", features = ["derive"] }
