[package]
name = "anything-carl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
# anything_
anything-persistence = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"