[package]
name = "anything-common"
version = "0.1.0"
edition = "2021"


[features]
default = ["telemetry"]
telemetry = [
    "opentelemetry",
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
# ew
anything-runtime = { workspace = true }

tracing-opentelemetry = { version = "0.21.0", optional = true }
tracing = { version = "0.1.37", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
], optional = true }
opentelemetry = { version = "0.20", default-features = false, features = [
    "trace",
], optional = true }
opentelemetry-jaeger = { version = "0.19", optional = true }

serde = { workspace = true }
toml = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
data-encoding = "2.3"
sha2 = "0.10.1"
derive_builder = { workspace = true }
