[package]
name = "anything-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anything-graph = { workspace = true }
anything-runtime = { workspace = true }
anything-store = { workspace = true }
anything-mq = { workspace = true }
anything-carl = { workspace = true }
anything-common = { workspace = true }
anything-persistence = { workspace = true }

derive_builder = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = "0.11.2"
anymap = "1.0.0-beta.2"
# postage = "0.5.0"
tracing = { workspace = true }
postage = "0.5.0"
petgraph = { version = "0.6.4", features = ["serde"] }
tempfile = { workspace = true }
dashmap = { version = "5.5.3", features = ["serde"] }
once_cell = "1.18.0"
uuid = { workspace = true, features = ["v4", "serde"] }
ractor = "0.9.3"
arraydeque = "0.5.1"
toml = { workspace = true }
tera = "1.19.1"
chrono = { workspace = true }
cron = "0.12.1"
