[package]
name = "anything-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
anything-runtime = { workspace = true }
anything-common = { workspace = true}
tracing = { workspace = true }

anymap2 = "0.13.0"
petgraph = { version = "0.6.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tera = "1.19.1"
derive_builder = {workspace = true}
thiserror = "1.0.49"
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["indexmap"] }
indexmap = { workspace = true, features = ["serde"] }
serde_bytes = "0.11.12"
chrono = {workspace = true}
