[package]
name = "anything-mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
anymap = "1.0.0-beta.2"
flate2 = "1.0.28"
futures = "0.3.28"
lazy_static.workspace = true
log = "0.4.20"
regex = "1.9.6"
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { workspace = true, features = ["full", "rt"] }
tokio-util = { version = "0.7.9", features = ["codec"] }

anything-common = { workspace = true }
async-channel = "1.9.0"
