[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anything-graph = { workspace = true }
async-trait.workspace = true
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
# async_trait = { workspace = true}
