[package]
name = "anything-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
anything-graph = { workspace = true }
anything-common = { workspace = true }
anything-store = { workspace = true }

async-trait.workspace = true
sqlx = { version = "0.7.2", features = ["runtime-tokio", "chrono"] }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
