[package]
name = "anything-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["plugins/*"]

[dependencies]

[workspace.dependencies]
anything-runtime = { version = "0.1.0", path = "../runtime" }
anything-common = { path = "../common" }

[profile.dev]
opt-level = 0
debug = 2
lto = false

[profile.test]
opt-level = 0
debug = 2
lto = false

[profile.release]
opt-level = 3
