[package]
name = "anything-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
futures = "0.3.28"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }


tokio = { workspace = true, features = ["full"] }
anything-common = { path = "../common", features = ["telemetry"] }
anyhow = "1.0.75"
thiserror = "1.0.49"
tempfile = {workspace = true }
serde = { workspace = true, features = ["derive"] }
