[package]
name = "tauri-plugin-anything"
version = "0.0.0"
authors = ["Carl Lippert"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.2" }
anything-common = { workspace = true }
anything-coordinator = { workspace = true }
anything-runtime = { workspace = true }
anything-graph = { workspace = true }
anything-persistence = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
