[package]
name = "anything-pdk-mock-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

# inspired from moonrepo proto https://moonrepo.dev/docs/guides/wasm-plugins#creating-a-plugin
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
