[package]
name = "anything-pdk-mock-simple-host"
version = "0.0.1"
edition = "2021"

[dependencies]
extism = "1.0.0"
anything-pdk = { path = "../pdk" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
jsonschema = "0.18"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
