[package]
name = "anything-pdk"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Anything Plugin Development Kit (PDK) based on Extism PDK"
repository = "https://github.com/tryanything-ai/anything"

[dependencies]
extism = "1.2.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
