[package]
name = "anything-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
postgrest = "1.6.0"
serde =  { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio =  { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }