[package]
name = "anything-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
cron = "0.12.1"
dotenv = "0.15.0"
extism = "1.3.0"
hyper = { version = "1.3.1", features = ["full"] }
jsonwebtoken = "9.3.0"
postgrest = "1.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
slugify = "0.1.0"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = "1.10.0"
