[package]
name = "anything-http-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
extism-pdk = "1.1.0"
anything-pdk = { path = "../../pdk" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
