[package]
name = "anything-plugin-deno"
version = "0.1.0"
edition = "2021"

[lib]
name = "anything_plugin_deno"
path = "src/lib.rs"

crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
anything-runtime = { workspace = true }
deno_ast = { version = "0.30.0", features = ["typescript", "transpiling"] }
deno_fs = "0.31.0"
deno_runtime = "0.129.0"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_v8 = "0.131.0"
tempfile = "3.8.0"
tokio = "1.21.2"

[dev-dependencies]
indexmap = { version = "2.0.2", features = ["serde"] }
