[package]
name = "anything-plugin-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anything_plugin_http"
path = "src/lib.rs"

crate-type = ["cdylib"]

[dependencies]
anything-runtime = { workspace = true }
anything-common = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
# reqwest = { version = "0.11.13", features = ["json"] }
# reqwest = { version = "0.11.13", features = ["blocking", "json"] }
anyhow = "1.0"
# futures = "0.3.25"
ureq = "2.9.7"
# [build-dependencies]
# datetime = { version = "0.5.2", default_features = false }
